[project]
name = "tmsh"
version = "0.0.1"
description = "Type-annotated and linted Python interface for Gmsh"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gmsh==4.13.1",
]

[dependency-groups]
dev = [
    "build >=1.2.2.post1",
    "mypy >=1.15.0",
    "pip >=25.0.1",
    "pyright >=1.1.399",
    "ruff >=0.11.6",
    "setuptools >=79.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
